<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:columnCount="2">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/birth_day"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/profession"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prof_code"
        app:layout_column="0"
        app:layout_columnWeight="1"
        app:layout_row="5" />

    <TextView
        android:id="@+id/first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="3"
        app:layout_row="0" />

    <TextView
        android:id="@+id/last"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="3"
        app:layout_row="1" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="3"
        app:layout_row="2" />

    <TextView
        android:id="@+id/photos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="3"
        app:layout_row="3" />

    <TextView
        android:id="@+id/prof"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="3"
        app:layout_row="4" />

    <TextView
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_column="1"
        app:layout_columnWeight="3"
        app:layout_row="5" />
</android.support.v7.widget.GridLayout>